tests/errors/examples/nested_call.vg
<view name="Test">
  <div>{numberToString(numberToString(count))}</div>
</view>
